# Robotics-Project

./: .gitignore  README.md
esp/: micro_ros_publisher.ino
my_robot_arm_moveit/: CMakeLists.txt
my_robot_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  urdf_moveit.ros2_control.xacro  urdf_moveit.srdf
my_robot_arm_moveit/launch/: demo.launch.py  demo_gazebo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
my_robot_arm_pkg/: CMakeLists.txt  package.xml
my_robot_arm_pkg/config/: joint_controllers.yaml
my_robot_arm_pkg/launch/: gazebo.launch.py
my_robot_arm_pkg/meshes/: base_link.STL  link1.STL  link2.STL  link4.STL  link6.STL  rightTip.STL
my_robot_arm_pkg/urdf/: urdf_moveit.urdf
src/: bridge_node.py
src/my_robot_arm_moveit/: .setup_assistant  package.xml
src/my_robot_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  urdf_moveit.ros2_control.xacro  urdf_moveit.srdf  urdf_moveit.urdf.xacro
src/my_robot_arm_moveit/launch/: demo_gazebo.launch.py  moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py
src/my_robot_arm_pkg/launch/: display.launch.py
src/my_robot_arm_pkg/meshes/: leftTip.STL  link3.STL  link5.STL
src/my_robot_arm_pkg/urdf/: urdf_V4.csv  urdf_V4.urdf  urdf_moveit.urdf
