<package format="3">
<name>my_robot_arm_pkg</name>
<version>0.0.1</version>
<description>The robot description package for my robotic arm</description>
<maintainer email="ahmed@example.com">ahmed</maintainer>
<license>MIT</license>
<buildtool_depend>ament_cmake</buildtool_depend>
<!--  Runtime dependencies  -->
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>joint_state_publisher</exec_depend>
<exec_depend>joint_state_publisher_gui</exec_depend>
<exec_depend>rviz2</exec_depend>
<exec_depend>urdf</exec_depend>
<depend>gripper_controllers</depend>
<depend>gz_ros2_control</depend>
<depend>python3-numpy</depend>
<depend>rclcpp</depend>
<exec_depend>gz_ros2_control_demos</exec_depend>
<depend>ros_gz</depend>
<!--  Gazebo + ros2_control dependencies  -->
<exec_depend>ros_gz_sim</exec_depend>
<exec_depend>ros_gz_bridge</exec_depend>
<exec_depend>ros2_control</exec_depend>
<exec_depend>controller_manager</exec_depend>
<depend>ros2_controllers</depend>
<depend>ros_gz_image</depend>
<depend>trajectory_msgs</depend>
<depend>xacro</depend>
<export>
<build_type>ament_cmake</build_type>
</export>
</package>